Change Notes
=============

2010-01-22 FLI
	- Added 'lastException' property to ProcessContext
	
2010-01-18 FLI
	- Mapping editor is now able to sort mapping elements by expression or by path
	- Mapping editor action 'delete all entries' added
	
2009-12-16 jbornema
	- CubeHandler supports new "[datapool key].datapool.zip" property in etlgine server.properties to
	  enable zip compression of the datapool.
	- JDBCUtil.openConnection(...) logs JDBC connection open.
	- DataPoolInitializerUtil.ensureCube(...) recreates the cube if the definition is different.
	- JDBCLoader.commitOnProcessFinished property added (true by default) that commits shared connections with disabled autoCommit
	  in the onProcessFinished event. 

2009-11-24 FLI
	- cleared lastException property if a Job is executed
	- ZipSources now implements IProcessFinalizer to close the zip archive on finish
	
2009-11-12 jbornema
	- CubeHandler.openDataPool(String) calls init script when de-serialization fails
	- CSVExtractor.openSource is always checking the encoding (fix when reopen occurs)
	- JDBCExtractor uses new List<DataType> typeHints field to keep the original DataType from the table
	  This fixes changed column data types that are used to get the record values
	- XLSExtractor supports FileSource and can be now be used with ZipSources
	- DataPoolInitializerUtil removes the cube if the dimensions or measures changed
	- JDBCLoader supports now boolean in autoDetectColumnTypes

2009-11-06 FLI
	- You can now disable triggers by setting 'trigger.enabled' to false in the server.properties
	- Added 'Sort Elements' action to dimension editor
	- Added notification service
	- Added validFrom and validTo date ranges to the mapping
	- Increased content width to 950 (expecting min. 1280px width)
	- Implemented Stop action in job list
	
2009-11-03 FLI
	- Added StopFlag into process context - needs to be implemented further thought
	- Added JDBCUtil.executeUpdate(..)